--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,9 +3,8 @@
 
 @import "{{ site.theme }}";
 
-div {
-  padding-top: 30px;
-  padding-right: 2px;
-  padding-bottom: 30px;
-  padding-left: 2px;
-}
+body {
+	margin: 0;
+	padding: 0;
+	border: none;
+	}
