--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,11 @@
 
 @import "{{ site.theme }}";
 
-body {
-	margin: 0;
-	padding: 0;
-	border: none;
-	}
+.main-content {
+
+  @include large {
+    max-width: 64rem;
+    padding: 2rem 2rem;
+    margin: 0 auto;
+    font-size: 1.1rem;
+  }
