--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,8 +7,13 @@
 
   @include large {
     max-width: 64rem;
-    padding: 2rem 2rem;
-    margin: 0 auto;
+    padding: 2rem 1rem;
     font-size: 1.1rem;
   }
+  
+  @include medium {
+    padding: 2rem 1rem;
+    font-size: 1.1rem;
+  }
+
 }
